Updated python workflow to commit files

--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -14,3 +14,4 @@ jobs:
       - run: py -m pip install pyautogui
       - run: pip install --upgrade pyinstaller
       - run: cd ./src && pyinstaller -y --clean main.py
+      - uses: stefanzweifel/git-auto-commit-action@v5
