--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -18,6 +18,6 @@ jobs:
           pip install --upgrade pyinstaller
 
       - name: Build python exe
-        run: cd ./src && pyinstaller -y --clean main.py
+        run: cd ./src && pyinstaller -y --clean --distpath AutoGUIAntiAFK/dist main.py
 
       - uses: stefanzweifel/git-auto-commit-action@v5
