--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -8,6 +8,7 @@ jobs:
     runs-on: windows-latest
     steps:
       - uses: actions/checkout@v4
+
       - uses: actions/setup-python@v5
         with:
           python-version: "3.13"
@@ -18,6 +19,8 @@ jobs:
           pip install --upgrade pyinstaller
 
       - name: Build python exe
-        run: cd ./src && pyinstaller -y --clean --distpath AutoGUIAntiAFK/dist main.py
+        run: |
+          cd "./src"
+          pyinstaller --noconfirm --clean --distpath "AutoGUIAntiAFK/dist" main.py
 
       - uses: stefanzweifel/git-auto-commit-action@v5
