--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -19,8 +19,6 @@ jobs:
           pip install --upgrade pyinstaller
 
       - name: Build python exe
-        run: |
-          cd "./src"
-          pyinstaller --noconfirm --clean --distpath "AutoGUIAntiAFK/dist" main.py
+        run: cd ./src && pyinstaller --noconfirm --clean --distpath "AutoGUIAntiAFK/dist" main.py
 
       - uses: stefanzweifel/git-auto-commit-action@v5
